
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleOne"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cat1Card"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:id="@+id/cat1Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat2Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:id="@+id/cat2Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat3Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:id="@+id/cat3Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat3"
                android:contentDescription="TODO" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleTwo"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/poppins_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cat4Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat4Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat4"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat5Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat5Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat5"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat6Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat6Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat6"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/titleThree"
        android:fontFamily="@font/poppins_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cat7Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat7Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat7"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat8Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat8Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat8"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat9Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/cat9Image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cat9"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        />

    <TextView
        android:id="@+id/txtDevName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/developer"
        android:fontFamily="@font/poppins_bold" />

    <TextView
        android:id="@+id/txtDevBatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/developerBatch"
        android:fontFamily="@font/poppins_regular"
        />
</LinearLayout>


